third_party/move/move-compiler-v2/tests/file-format-generator/bug_14813_fun_call_ability.exp

Diagnostics:
warning: Unused parameter `key`. Consider removing or prefixing with an underscore: `_key`
  ┌─ tests/file-format-generator/bug_14813_fun_call_ability.move:9:40
  │
9 │     fun search<V: drop>(self: &Map<V>, key: u256): bool {
  │                                        ^^^


============ disassembled file-format ==================
// Move bytecode v7
module 815.red_black_map {
struct Map<phantom Ty0> has drop {
	dummy_field: bool
}

public contains<Ty0>(Arg0: &Map<Ty0>, Arg1: u256): bool /* def_idx: 0 */ {
B0:
	0: MoveLoc[0](Arg0: &Map<Ty0>)
	1: MoveLoc[1](Arg1: u256)
	2: Call search<Ty0>(&Map<Ty0>, u256): bool
	3: Ret
}
search<Ty0: drop>(Arg0: &Map<Ty0>, Arg1: u256): bool /* def_idx: 1 */ {
B0:
	0: LdTrue
	1: MoveLoc[0](Arg0: &Map<Ty0>)
	2: Pop
	3: Ret
}
}
============ bytecode verification failed ========

Diagnostics:
bug: bytecode verification failed with unexpected status code `CONSTRAINT_NOT_SATISFIED`. This is a compiler bug, consider reporting it.
Error message: missing abilities for `CallGeneric(0)` at code offset 2
   ┌─ tests/file-format-generator/bug_14813_fun_call_ability.move:1:1
   │
 1 │ ╭ module 0x815::red_black_map {
 2 │ │
 3 │ │     struct Map<phantom V> has drop {}
 4 │ │
   · │
11 │ │     }
12 │ │ }
   │ ╰─^
